--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "g": "^2.0.1",
+    "neucron-sdk": "^0.2.3",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
