--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@types/node": "^22.0.0",
     "@vercel/postgres": "^0.9.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
@@ -28,6 +29,7 @@
     "neucron-sdk": "^0.2.3",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
+    "svelte-kit-cookie-session": "^4.0.0",
     "tailwindcss": "^3.4.7",
     "vercel": "^35.2.1"
   }
