--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/pg": "^8.11.6",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
@@ -25,7 +26,9 @@
     "@vercel/postgres": "^0.9.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "g": "^2.0.1",
+    "jsonwebtoken": "^9.0.2",
     "neucron-sdk": "^0.2.3",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
