--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.40",
     "svelte-kit-cookie-session": "^4.0.0",
     "tailwindcss": "^3.4.7",
-    "vercel": "^35.2.1"
+    "vercel": "^35.2.1",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
